<resources>
    <string name="app_name">Slum Schools</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_marker">Add your school</string>
    <string name="about">About</string>
    <string name="privacy_url">https://uroosfatima.wixsite.com/androiddeveloper/privacy-policy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Log out</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="error_message">You are offline.</string>

    <!-- Details Activity and Input Activity-->
    <string name="key_name">name</string>
    <string name="key_address">address</string>
    <string name="key_email">email</string>
    <string name="key_starttime">starttime</string>
    <string name="key_endtime">endtime</string>
    <string name="key_phone">phone</string>
    <string name="key_latitude">latitude</string>
    <string name="key_longitude">longitude</string>
    <string name="key_uid">uid</string>
    <string name="key_bundle_school">school</string>

    <string name="tv_name_label">Name</string>
    <string name="tv_address_label">Address</string>
    <string name="tv_email_label">Email</string>
    <string name="tv_starttime_label">Start time</string>
    <string name="tv_endtime_label">End time</string>
    <string name="tv_dayopen_label">Days open</string>
    <string name="tv_to_label">To</string>
    <string name="tv_phone_label">Phone</string>

    <string name="btn_save">Save</string>

    <!-- Details Activity and Input Activity-->
    <string name="tv_about"> There are people trying their best to spread education by running schools
                            for the underprivileged in whatever setting convenient for them like
                            a street or a park. There are volunteers who want to participate
                            but have no way of knowing the whereabouts of the school except through word of mouth.
                            Through this app we aspire to connect these two groups.</string>

    <!-- Content Descriptions-->
    <string name="content_description_call">call</string>
    <string name="content_description_email">send mail</string>
    <string name="content_description_like">like</string>

    <!-- Paths for transitions-->
    <!--<string name="path_menu">M3,18h18v-2L3,16v2zM3,13h18v-2L3,11v2zM3,6v2h18L21,6L3,6z</string>-->
    <string name="path_menu">M 3.0,18.0 h 18.0 v -2.0 L 3.0,16.0 v 2.0 L 3.0,18.0 M 3.0,13.0 h 18.0 v -2.0 H 21.0 l 0.0,0.0 L 3.0,11.0 v 2.0 l 0.0,0.0 l 0.0,0.0 l 0.0,0.0 L 3.0,13.0 M 3.0,6.0 H 3.0 v 2.0 h 18.0 L 21.0,6.0 L 3.0,6.0 </string>
    <!--<string name="path_back">M20,11H7.83l5.59,-5.59L12,4l-8,8 8,8 1.41,-1.41L7.83,13H20v-2z</string>-->
    <string name="path_back">M 0.0,0.0 h 0.0 v 0.0 L 0.0,0.0 v 0.0 L 0.0,0.0 M 20.0,11.0 h 0.0 v 0.0 H 7.83 l 5.59,-5.59 L 12.0,4.0 v 0.0 l -8.0,8.0 l 8.0,8.0 l 1.41,-1.41 L 7.83,13.0 M 7.83,13.0 H 20.0 v -2.0 h 0.0 L 20.0,11.0 L 20.0,11.0 </string>
    <string name="tick">tick</string>
    <string name="cross">cross</string>
    <string name="groupTickCross">groupTickCross</string>
    <string name="tv_dayfrom_label">Days open</string>
    <string name="tv_dayto_label">To</string>
    <string name="key_dayfrom">dayfrom</string>
    <string name="key_dayto">dayto</string>
    <integer name="duration">450</integer>

    <string name="facebook_app_id">437900580111947</string>
    <string name="fb_login_protocol_scheme">fb437900580111947</string>
    <string name="menu_item_delete">Delete</string>

    <!--Spinner resource-->
    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">429578614297153</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb429578614297153</string>
    <string name="privacy">Privacy</string>
</resources>

