<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="DetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarInput"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <TextView
        android:id="@+id/tvDetailName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_116"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDetailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailName" />

    <TextView
        android:id="@+id/tvDetailEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailAddress" />

    <TextView
        android:id="@+id/tvDetailStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailEmail" />

    <TextView
        android:id="@+id/tvDetailPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailEndTime" />

    <TextView
        android:id="@+id/tvDetailEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailStartTime" />

    <TextView
        android:id="@+id/tvDetailNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_name_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailName"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        tools:text="Name" />

    <TextView
        android:id="@+id/tvDetailAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_address_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailAddress"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        tools:text="Address" />

    <TextView
        android:id="@+id/tvDetailEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_email_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailEmail"
        app:layout_constraintEnd_toStartOf="@+id/tvDetailEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        tools:text="Email" />

    <TextView
        android:id="@+id/tvDetailStartTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_starttime_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailStartTime"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        tools:text="Start time" />

    <TextView
        android:id="@+id/tvDetailEndTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_endtime_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailEndTime"
        app:layout_constraintEnd_toStartOf="@+id/tvDetailEndTime"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        tools:text="End time" />

    <TextView
        android:id="@+id/tvPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_phone_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailPhone"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        tools:text="Phone" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="110dp" />

    <ImageButton
        android:id="@+id/btnDetailCall"
        style="@style/DetailImageButtonThemeLandscape.Portrait"
        android:contentDescription="@string/content_description_call"
        android:src="@drawable/ic_call_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDetailEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnDetailLike"
        style="@style/DetailImageButtonThemeLandscape.Portrait"
        android:contentDescription="@string/content_description_like"
        android:src="@drawable/ic_mood_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDetailEmail" />

    <ImageButton
        android:id="@+id/btnDetailEmail"
        style="@style/DetailImageButtonThemeLandscape.Portrait"
        android:contentDescription="@string/content_description_email"
        android:src="@drawable/ic_mail_outline_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDetailLike"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDetailCall" />

</android.support.constraint.ConstraintLayout>